aggiunto filtro in main.py per caricare solo determinati corsi

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -125,6 +127,7 @@ celerybeat.pid
 .env
 .venv
 env/
+my-venv/
 venv/
 ENV/
 env.bak/
